--- a/WebApplication9/Content/Site.css
+++ b/WebApplication9/Content/Site.css
@@ -1,6 +1,6 @@
 ﻿/* Move down content because we have a fixed navbar that is 50px tall */
 body {
-    padding-top: 100px;
+    padding-top: 110px;
     padding-bottom: 20px;
 
 }
@@ -41,8 +41,9 @@ textarea {
         padding: 0;
     }
     .nav.navbar-nav.navbar-right {
-        margin-top: 25px;
-        text-align: center;
+        text-align:center;
+
+        padding: 28px 0px 28px 0px;
     }
 }
 
